# Compiler

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  DynamicArray.c  DynamicArray.h  Strings.c  Strings.h  build  build.set  buildsys.c  main  main.c  test.txt  test2.txt
include/: DynamicArray.h  Strings.h  lexer.h
src/: DynamicArray.c  DynamicArray.h  Strings.c  Strings.h  VirtualMachine.c  lexer.c  lexer.h  main.c  parser.c  parser.h  visualizer.c
